test/files/neg/macro-bundle-trait.check
macro-bundle-trait.scala:10: error: not found: value Bundle
  def foo = macro Bundle.impl
                  ^
one error found
